# websockets-example

./: .pre-commit-config.yaml  Makefile  pyproject.toml
src/: client.py  models.py  server.py
